# trade3

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DEPLOY.md  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/src/trade3_api/: __init__.py  ai_models.py  analysis_models.py  auto_signal_collector.py  auto_signal_journal.py  auto_signal_models.py  bybit.py  bybit_ws.py  candle_cache.py  carry_test_collector.py  carry_test_journal.py  carry_test_models.py  config.py  decision_export.py  decision_journal.py  decision_models.py  execution.py  fixed_verification.py  fixed_verification_cli.py  flow_models.py  funding_carry.py  funding_carry_models.py  historical_replay.py  historical_replay_v2.py  indicators.py  intraday.py  journal.py  journal_evaluation.py  journal_models.py  live_engine.py  live_models.py  live_store.py  local_agent_cli.py  local_agent_models.py  local_agent_worker.py  main.py  market_analysis.py  market_flow.py  models.py  (+11 more)
apps/api/tests/: test_api_decisions.py  test_auto_signal_journal.py  test_bybit.py  test_carry_test_journal.py  test_config.py  test_decision_export.py  test_decision_journal.py  test_execution.py  test_fixed_verification.py  test_funding_carry.py  test_historical_replay.py  test_historical_replay_v2.py  test_indicators.py  test_intraday.py  test_journal.py  test_live_engine.py  test_live_store.py  test_local_agent_worker.py  test_market_analysis.py  test_market_flow.py  test_ollama_analysis.py  test_overnight_research.py  test_scanner.py  test_services.py  test_trade_plan.py
(+109 files in other folders)
