[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade3-api"
version = "0.1.0"
description = "Local API for the Trade3 discretionary futures decision terminal"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "truststore>=0.10,<1",
  "uvicorn[standard]>=0.34,<1",
  "websockets>=15,<17",
]

[project.scripts]
trade3-replay = "trade3_api.research_cli:main"
trade3-overnight = "trade3_api.overnight_cli:main"
trade3-verify-fixed = "trade3_api.fixed_verification_cli:main"
trade3-local-agents = "trade3_api.local_agent_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trade3_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
